--- a/src/styles/AboutUs.css
+++ b/src/styles/AboutUs.css
@@ -71,7 +71,7 @@ body {
   @media (max-width: 768px) {
     .about-us-container {
       padding: 20px;
-      margin: 20px;
+      margin: 100px auto;
     }
   
     .about-us-container h1 {
